Button click now appears in display

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
     font-family: monospace;
     padding: 50px 10px;
 }
-#display {
+#screen {
     border: 5px solid blue;
     font-size: 50px;
     width: 50%;
