--- a/style.css
+++ b/style.css
@@ -1,48 +1,48 @@
-body {
+* {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;   
 }
-h1 {
-    align-content: center;
+@font-face {
+  font-family: "Digital 7";
+  src: url(digital-7.mono.ttf) format("truetype");
+}
+h1 {  
+    text-align: center;
+    font-size: 50px;
     font-family: monospace;
     padding: 50px 10px;
 }
 #screen {
-    border: 5px solid blue;
-    font-size: 50px;
-    width: 50%;
-    margin: 40px;
+    font-family: "Digital 7", sans-serif;
+    display: block;
+    background-color: #FFFFFF;
+    border: 5px solid #C33C54;
+    font-size: 60px;
+    width: 95%;
+    margin: 20px;
     text-align: right;
 }
-span {
-    left: 0;
-}
-#calc {
+#calculator {
+    background-color: #37718E;
     padding: 20px;
-    display: flex;
-    width: 800px;
-    height: 50%;
+    width: 600px;
+    margin: auto;
+    height: auto;
     align-items: center;
-    flex-wrap: wrap;
 }
 button {
-/*
-    width: 7%;
-    color: antiquewhite;
-    padding: 10px;
-    text-align: center;
-*/
     display: inline-block;
     border: none;
-    padding: 1rem 2rem;
-    margin: 0;
+    padding: 1rem 1.5rem;
+    margin: 0.5em;
     text-decoration: none;
-    background: #0069ed;
+    background: #254E70;
     color: #ffffff;
     font-family: sans-serif;
-    font-size: 1rem;
+    font-size: 1.5rem;
     cursor: pointer;
     text-align: center;
     transition: background 250ms ease-in-out, 
@@ -53,7 +53,7 @@ button {
 
 button:hover,
 button:focus {
-    background: #0053ba;
+    background: #8EE3EF;
 }
 
 button:focus {
@@ -63,9 +63,4 @@ button:focus {
 
 button:active {
     transform: scale(0.99);
-}
-
-#1 {
-    font-family: monospace;
-    font-size: 20px;
 }
