--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
     box-sizing: border-box;   
 }
 @font-face {
-  font-family: "Digital 7";
-  src: url(digital-7.mono.ttf) format("truetype");
+    font-family: "Digital 7";
+    src: url(digital-7.mono.ttf) format("truetype");
 }
 h1 {  
     text-align: center;
     font-size: 3rem;
     font-family: monospace;
-    padding: 3rem 0.625rem;
+    padding: 2.5rem;
 }
 #screen {
     font-family: "Digital 7", sans-serif;
@@ -30,13 +30,8 @@ h1 {
     padding: 1.5rem;
     width: 18rem;
     margin: auto;
-    height: auto;
-    align-items: center;
+    height: 21.9rem;
     position: relative;
-}
-#calc {
-    background-color: #37718E; 
-    height: 13rem;
 }
 #numbers {
     position: absolute;
@@ -48,14 +43,12 @@ h1 {
     right: 0;
     bottom: 15px;
     width: 40%;
-    
 }
 button {
     display: inline-block;
     border: none;
     padding: 0.3rem 0.75rem;
     margin: 0.5rem;
-    text-decoration: none;
     background: #254E70;
     color: #ffffff;
     font-family: sans-serif;
@@ -76,9 +69,5 @@ button:focus {
 button:focus {
     outline: 1px solid #fff;
     outline-offset: -4px;
-}
-
-button:active {
-    transform: scale(0.99);
 }
 
