--- a/style.css
+++ b/style.css
@@ -22,33 +22,36 @@ h1 {
     box-shadow: 2px 4px;
     font-size: 3rem;
     width: 100%;
-    margin: 1.25rem;
+    margin-bottom: 1.5rem;
     text-align: right;
 }
 #calculator {
     background-color: #37718E;
     padding: 1.5rem;
-    width: 18rem;
+    width: 20rem;
     margin: auto;
-    height: 21.9rem;
+    height: 20.5rem;
     position: relative;
 }
 #numbers {
     position: absolute;
     left: 0;
-    width: 65%;
+    width: 60%;
+    margin-left: 5%;
 }
 #calccolumn {
     position: absolute;
     right: 0;
     bottom: 15px;
-    width: 40%;
+    width: 35%;
+    text-align: right;
+    margin-right: 5%
 }
 button {
     display: inline-block;
     border: none;
-    padding: 0.3rem 0.75rem;
     margin: 0.5rem;
+    width: 2.8rem;
     background: #254E70;
     color: #ffffff;
     font-family: sans-serif;
@@ -60,7 +63,11 @@ button {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
-
+.number,
+#decimal,
+#equals {
+    height: 2rem;
+}
 button:hover,
 button:focus {
     background: #C33C54;
